--- a/style/style.css
+++ b/style/style.css
@@ -136,3 +136,60 @@ header {
           -o-transition: opacity ease-in-out 0.07s;
           transition: opacity ease-in-out 0.07s;
           opacity: .9; }
+
+.dropdown {
+  background: url(../images/list-logo/MxM9gyR7SPyCJw5hcPdmrg.jpg);
+  background-position-x: 51%;
+  height: 430px;
+  width: 100%;
+  position: absolute; }
+  .dropdown .shadow-block {
+    background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.075)), color-stop(50%, rgba(0, 0, 0, 0.349)), to(rgba(0, 0, 0, 0.075)));
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.075) 100%);
+    background: -o-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.075) 100%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.075) 100%);
+    height: 145px;
+    width: 100%; }
+    .dropdown .shadow-block .main-dropdown {
+      margin: 0 auto;
+      height: 100%;
+      width: 955px; }
+      .dropdown .shadow-block .main-dropdown .showcase-list {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; }
+        .dropdown .shadow-block .main-dropdown .showcase-list__items {
+          width: 115px;
+          height: 78px;
+          margin-top: 30px;
+          margin-right: 42px; }
+          .dropdown .shadow-block .main-dropdown .showcase-list__items .content-change {
+            display: block; }
+            .dropdown .shadow-block .main-dropdown .showcase-list__items .content-change__logo {
+              display: block; }
+              .dropdown .shadow-block .main-dropdown .showcase-list__items .content-change__logo svg {
+                display: block;
+                margin: 0 auto; }
+            .dropdown .shadow-block .main-dropdown .showcase-list__items .content-change__text {
+              font-family: Arial, Helvetica, sans-serif;
+              color: #9B9B9B;
+              display: block;
+              margin-top: 15px;
+              text-align: center;
+              font-size: 14px; }
+        .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(3) {
+          width: 120px; }
+          .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(3) .content-change__text {
+            margin-top: 20px; }
+        .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(5) {
+          width: 120px; }
+          .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(5) .content-change__logo {
+            margin-top: 6px; }
+          .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(5) .content-change__text {
+            margin-top: 24px; }
+        .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(6) {
+          width: 120px; }
+          .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(6) .content-change__logo {
+            margin-top: 10px; }
+          .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(6) .content-change__text {
+            margin-top: 24px; }
