--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -83,7 +83,9 @@ header {
     background-position-x: 51%;
     height: 430px;
     width: 100%;
+    display: none;
     position: absolute;
+    top: 0;
     .shadow-block {
         background: linear-gradient(90deg, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.075) 100%);
         height: 145px;
@@ -97,8 +99,9 @@ header {
                 &__items {
                     width: 115px;
                     height: 78px;
+                    cursor: pointer;
                     margin-top: 30px;
-                    margin-right: 42px;
+                    margin-right: 40px;
                     .content-change {
                         display: block;
                         &__logo {
@@ -135,6 +138,7 @@ header {
                 }
                 &__items:nth-child(6) {
                     width: 120px;
+                    margin-right: 0;
                     .content-change__logo {
                         margin-top: 10px;
                     }
