--- a/style/style.css
+++ b/style/style.css
@@ -138,11 +138,14 @@ header {
           opacity: .9; }
 
 .dropdown {
-  background: url(../images/list-logo/MxM9gyR7SPyCJw5hcPdmrg.jpg);
-  background-position-x: 51%;
+  background: url(../images/list-logo/MxM9gyR7SPyCJw5hcPdmrg.jpg) 51%;
   height: 430px;
   width: 100%;
-  display: none;
+  opacity: 0;
+  -webkit-transition: all ease-in-out 0.15s;
+  -o-transition: all ease-in-out 0.15s;
+  transition: all ease-in-out 0.15s;
+  pointer-events: none;
   position: absolute;
   top: 0; }
   .dropdown .shadow-block {
