--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -158,6 +158,61 @@ header {
             }
         }
     }
+    .media-block {
+        height: 285px;
+        width: 100%;
+        .container {
+            height: 100%;
+            width: 1024px;
+            display: flex;
+            margin: 0 auto;
+            .media-content {
+                width: 390px;
+                height: 100%;
+                margin-right: 10px;
+                &:nth-child(1) {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                &:nth-child(2) {
+                    background-color: rgba(0, 0, 0, 0.055);
+                }
+                &__logo-game {
+                    background: url("../images/media-logo/Wc9we6f7SWeZPExOChwGRA.svg");
+                    width: 170px;
+                    height: 110px;
+                }
+            }
+            .combine {
+                display: flex;
+                .combine-content {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: 370px;
+                    &:nth-child(1) {
+                        background: rgba(0, 0, 0, 0.13);
+                        padding: 55px 20px 0;
+                        width: 340px;
+                    }
+                    &:nth-child(2) {
+                        background-color: rgba(0, 0, 0, 0.185);
+                        width: 272px;
+                    }
+                    &__title {
+                        text-transform: uppercase;
+                        color: #f25322;
+                        font-size: 16px;
+                        margin-bottom: 18px;
+                    }
+                    &__text {
+                        font-size: 14px;
+                        color: #e5e5e5;
+                        line-height: 23px;
+                    }
+                }
+            }
+        }
+    }
 }
 .showblock {
     pointer-events: initial;
