--- a/style/style.css
+++ b/style/style.css
@@ -106,7 +106,7 @@ header {
           cursor: pointer; }
           header .common_menu .left_menu .additional_tab .showcase__text {
             font-size: 13px;
-            color: white;
+            color: #e5e5e5;
             opacity: .6; }
           header .common_menu .left_menu .additional_tab .showcase__check-mark {
             background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
@@ -140,7 +140,7 @@ header {
           opacity: .6;
           margin-right: 18px; }
         header .common_menu .left_menu .static-menu__text:nth-child(2) {
-          color: white; }
+          color: #e5e5e5; }
         header .common_menu .left_menu .static-menu__text:hover {
           -webkit-transition: opacity ease-in-out 0.07s;
           -o-transition: opacity ease-in-out 0.07s;
@@ -159,10 +159,10 @@ header {
   position: absolute;
   top: 0; }
   .dropdown .shadow-block {
-    background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.075)), color-stop(50%, rgba(0, 0, 0, 0.349)), to(rgba(0, 0, 0, 0.075)));
-    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.075) 100%);
-    background: -o-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.075) 100%);
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.075) 100%);
+    background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.075)), color-stop(50%, rgba(0, 0, 0, 0.349)), to(rgba(0, 0, 0, 0.275)));
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
+    background: -o-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
     height: 145px;
     width: 100%; }
     .dropdown .shadow-block .main-dropdown {
@@ -172,7 +172,10 @@ header {
       .dropdown .shadow-block .main-dropdown .showcase-list {
         display: -webkit-box;
         display: -ms-flexbox;
-        display: flex; }
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; }
         .dropdown .shadow-block .main-dropdown .showcase-list__items {
           width: 115px;
           height: 78px;
@@ -253,7 +256,10 @@ header {
             width: 340px; }
           .dropdown .media-block .container .combine .combine-content:nth-child(2) {
             background-color: rgba(0, 0, 0, 0.185);
+            padding: 55px 20px 0;
             width: 272px; }
+            .dropdown .media-block .container .combine .combine-content:nth-child(2) .combine-content__title {
+              margin: 0 0 23px 9px; }
           .dropdown .media-block .container .combine .combine-content__title {
             text-transform: uppercase;
             color: #f25322;
@@ -263,6 +269,46 @@ header {
             font-size: 14px;
             color: #e5e5e5;
             line-height: 23px; }
+          .dropdown .media-block .container .combine .combine-content .platforms {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex; }
+            .dropdown .media-block .container .combine .combine-content .platforms .platform {
+              display: -webkit-box;
+              display: -ms-flexbox;
+              display: flex;
+              margin: 15px 23px 0 0; }
+              .dropdown .media-block .container .combine .combine-content .platforms .platform__logo {
+                background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
+                background-position: 0 -3180px;
+                margin-right: 4px;
+                width: 11px;
+                height: 15px; }
+              .dropdown .media-block .container .combine .combine-content .platforms .platform__text {
+                text-transform: uppercase;
+                font-size: 12px;
+                margin-top: 2px;
+                color: #e5e5e5; }
+              .dropdown .media-block .container .combine .combine-content .platforms .platform:nth-child(2) .platform__logo {
+                background-position: 0 -60px; }
+          .dropdown .media-block .container .combine .combine-content .list-links__items {
+            margin-bottom: 12px;
+            font-size: 13px;
+            color: #e5e5e5;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex; }
+            .dropdown .media-block .container .combine .combine-content .list-links__items .point {
+              background-color: #e5e5e5;
+              margin: 6px 7px 0 0;
+              border-radius: 50%;
+              display: block;
+              width: 2px;
+              height: 2px; }
+            .dropdown .media-block .container .combine .combine-content .list-links__items .bottom-frame {
+              border-bottom: 1px solid #e5e5e500; }
+              .dropdown .media-block .container .combine .combine-content .list-links__items .bottom-frame:hover {
+                border-bottom: 1px solid #e5e5e5; }
 
 .showblock {
   pointer-events: initial;
