--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -87,7 +87,6 @@ header {
     }
 }
 .dropdown {
-    background: url(../images/list-logo/0.jpg) 51%;
     height: 430px;
     width: 100%;
     opacity: 0;
@@ -97,6 +96,7 @@ header {
     top: 0;
     .shadow-block {
         background: linear-gradient(90deg, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
+        position: absolute;
         height: 145px;
         width: 100%;
         .main-dropdown {
@@ -119,6 +119,9 @@ header {
                             svg {
                                 display: block;
                                 margin: 0 auto;
+                                .showcase-list__items:hover .change-color {
+                                    fill: blue;
+                                }
                             }
                         }
                         &__text {
@@ -159,104 +162,108 @@ header {
             }
         }
     }
-    .media-block {
-        height: 285px;
-        width: 100%;
-        .container {
-            height: 100%;
-            width: 1024px;
-            display: flex;
-            margin: 0 auto;
-            .media-content {
-                width: 390px;
+    .group-blocks {
+        background: url(../images/list-logo/0.jpg) 51%;
+        padding-top: 145px;
+        .media-block {
+            height: 285px;
+            width: 100%;
+            .container {
                 height: 100%;
-                margin-right: 10px;
-                &:nth-child(1) {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
-                &:nth-child(2) {
-                    background-color: rgba(0, 0, 0, 0.055);
-                }
-                &__logo-game {
-                    background: url("../images/media-logo/Wc9we6f7SWeZPExOChwGRA.svg");
-                    width: 170px;
-                    height: 110px;
-                }
-            }
-            .combine {
+                width: 1024px;
                 display: flex;
-                .combine-content {
-                    font-family: Arial, Helvetica, sans-serif;
-                    width: 370px;
+                margin: 0 auto;
+                .media-content {
+                    width: 390px;
+                    height: 100%;
+                    margin-right: 10px;
                     &:nth-child(1) {
-                        background: rgba(0, 0, 0, 0.13);
-                        padding: 55px 20px 0;
-                        width: 340px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
                     }
                     &:nth-child(2) {
-                        background-color: rgba(0, 0, 0, 0.185);
-                        padding: 55px 20px 0;
-                        width: 272px;
-                        .combine-content__title {
-                            margin: 0 0 23px 9px;
+                        background-color: rgba(0, 0, 0, 0.055);
+                    }
+                    &__logo-game {
+                        background: url("../images/media-logo/Wc9we6f7SWeZPExOChwGRA.svg");
+                        width: 170px;
+                        height: 110px;
+                    }
+                }
+                .combine {
+                    display: flex;
+                    .combine-content {
+                        font-family: Arial, Helvetica, sans-serif;
+                        width: 370px;
+                        &:nth-child(1) {
+                            background: rgba(0, 0, 0, 0.13);
+                            padding: 55px 20px 0;
+                            width: 340px;
                         }
-                    }
-                    &__title {
-                        text-transform: uppercase;
-                        color: #f25322;
-                        font-size: 16px;
-                        margin-bottom: 18px;
-                    }
-                    &__text {
-                        font-size: 14px;
-                        color: #e5e5e5;
-                        line-height: 23px;
-                    }
-                    .platforms {
-                        display: flex;
-                        .platform {
+                        &:nth-child(2) {
+                            background-color: rgba(0, 0, 0, 0.185);
+                            padding: 55px 20px 0;
+                            width: 272px;
+                            .combine-content__title {
+                                margin: 0 0 23px 9px;
+                            }
+                        }
+                        &__title {
+                            text-transform: uppercase;
+                            color: #f25322;
+                            font-size: 16px;
+                            margin-bottom: 18px;
+                        }
+                        &__text {
+                            font-size: 14px;
+                            color: #e5e5e5;
+                            line-height: 23px;
+                        }
+                        .platforms {
                             display: flex;
-                            margin: 15px 23px 0 0;
-                            &__logo {
-                                background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
-                                background-position: 0 -3180px;
-                                margin-right: 4px;
-                                width: 11px;
-                                height: 15px;
-                            }
-                            &__text {
-                                text-transform: uppercase;
-                                font-size: 12px;
-                                margin-top: 2px;
-                                color: #e5e5e5;
-                            }
-                            &:nth-child(2) {
-                                .platform__logo {
-                                    background-position: 0 -60px;
+                            .platform {
+                                display: flex;
+                                margin: 15px 23px 0 0;
+                                &__logo {
+                                    background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
+                                    background-position: 0 -3180px;
+                                    margin-right: 4px;
+                                    width: 11px;
+                                    height: 15px;
+                                }
+                                &__text {
+                                    text-transform: uppercase;
+                                    font-size: 12px;
+                                    margin-top: 2px;
+                                    color: #e5e5e5;
+                                }
+                                &:nth-child(2) {
+                                    .platform__logo {
+                                        background-position: 0 -60px;
+                                    }
                                 }
                             }
                         }
-                    }
-                    .list-links {
-                        &__items {
-                            margin-bottom: 12px;
-                            font-size: 13px;
-                            color: #e5e5e5;
-                            display: flex;
-                            .point {
-                                background-color: #e5e5e5;
-                                margin: 6px 7px 0 0;
-                                border-radius: 50%;
-                                display: block;
-                                width: 2px;
-                                height: 2px;
-                            }
-                            .bottom-frame {
-                                border-bottom: 1px solid #e5e5e500;
-                                &:hover {
-                                    border-bottom: 1px solid #e5e5e5;
+                        .list-links {
+                            &__items {
+                                margin-bottom: 12px;
+                                font-size: 13px;
+                                color: #e5e5e5;
+                                display: flex;
+                                .point {
+                                    background-color: #e5e5e5;
+                                    margin: 6px 7px 0 0;
+                                    border-radius: 50%;
+                                    display: block;
+                                    width: 2px;
+                                    height: 2px;
+                                }
+                                .bottom-frame {
+                                    border-bottom: 1px solid #e5e5e500;
+                                    &:hover {
+                                        border-bottom: 1px solid #e5e5e5;
+                                    }
                                 }
                             }
                         }
