--- a/style/style.css
+++ b/style/style.css
@@ -148,7 +148,6 @@ header {
           opacity: .9; }
 
 .dropdown {
-  background: url(../images/list-logo/0.jpg) 51%;
   height: 430px;
   width: 100%;
   opacity: 0;
@@ -163,6 +162,7 @@ header {
     background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
     background: -o-linear-gradient(left, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
+    position: absolute;
     height: 145px;
     width: 100%; }
     .dropdown .shadow-block .main-dropdown {
@@ -189,6 +189,8 @@ header {
               .dropdown .shadow-block .main-dropdown .showcase-list__items .content-change__logo svg {
                 display: block;
                 margin: 0 auto; }
+                .dropdown .shadow-block .main-dropdown .showcase-list__items .content-change__logo svg .showcase-list__items:hover .change-color {
+                  fill: blue; }
             .dropdown .shadow-block .main-dropdown .showcase-list__items .content-change__text {
               font-family: Arial, Helvetica, sans-serif;
               color: #9B9B9B;
@@ -213,102 +215,105 @@ header {
             margin-top: 10px; }
           .dropdown .shadow-block .main-dropdown .showcase-list__items:nth-child(6) .content-change__text {
             margin-top: 24px; }
-  .dropdown .media-block {
-    height: 285px;
-    width: 100%; }
-    .dropdown .media-block .container {
-      height: 100%;
-      width: 1024px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      margin: 0 auto; }
-      .dropdown .media-block .container .media-content {
-        width: 390px;
+  .dropdown .group-blocks {
+    background: url(../images/list-logo/0.jpg) 51%;
+    padding-top: 145px; }
+    .dropdown .group-blocks .media-block {
+      height: 285px;
+      width: 100%; }
+      .dropdown .group-blocks .media-block .container {
         height: 100%;
-        margin-right: 10px; }
-        .dropdown .media-block .container .media-content:nth-child(1) {
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-pack: center;
-          -ms-flex-pack: center;
-          justify-content: center;
-          -webkit-box-align: center;
-          -ms-flex-align: center;
-          align-items: center; }
-        .dropdown .media-block .container .media-content:nth-child(2) {
-          background-color: rgba(0, 0, 0, 0.055); }
-        .dropdown .media-block .container .media-content__logo-game {
-          background: url("../images/media-logo/Wc9we6f7SWeZPExOChwGRA.svg");
-          width: 170px;
-          height: 110px; }
-      .dropdown .media-block .container .combine {
+        width: 1024px;
         display: -webkit-box;
         display: -ms-flexbox;
-        display: flex; }
-        .dropdown .media-block .container .combine .combine-content {
-          font-family: Arial, Helvetica, sans-serif;
-          width: 370px; }
-          .dropdown .media-block .container .combine .combine-content:nth-child(1) {
-            background: rgba(0, 0, 0, 0.13);
-            padding: 55px 20px 0;
-            width: 340px; }
-          .dropdown .media-block .container .combine .combine-content:nth-child(2) {
-            background-color: rgba(0, 0, 0, 0.185);
-            padding: 55px 20px 0;
-            width: 272px; }
-            .dropdown .media-block .container .combine .combine-content:nth-child(2) .combine-content__title {
-              margin: 0 0 23px 9px; }
-          .dropdown .media-block .container .combine .combine-content__title {
-            text-transform: uppercase;
-            color: #f25322;
-            font-size: 16px;
-            margin-bottom: 18px; }
-          .dropdown .media-block .container .combine .combine-content__text {
-            font-size: 14px;
-            color: #e5e5e5;
-            line-height: 23px; }
-          .dropdown .media-block .container .combine .combine-content .platforms {
+        display: flex;
+        margin: 0 auto; }
+        .dropdown .group-blocks .media-block .container .media-content {
+          width: 390px;
+          height: 100%;
+          margin-right: 10px; }
+          .dropdown .group-blocks .media-block .container .media-content:nth-child(1) {
             display: -webkit-box;
             display: -ms-flexbox;
-            display: flex; }
-            .dropdown .media-block .container .combine .combine-content .platforms .platform {
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center; }
+          .dropdown .group-blocks .media-block .container .media-content:nth-child(2) {
+            background-color: rgba(0, 0, 0, 0.055); }
+          .dropdown .group-blocks .media-block .container .media-content__logo-game {
+            background: url("../images/media-logo/Wc9we6f7SWeZPExOChwGRA.svg");
+            width: 170px;
+            height: 110px; }
+        .dropdown .group-blocks .media-block .container .combine {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex; }
+          .dropdown .group-blocks .media-block .container .combine .combine-content {
+            font-family: Arial, Helvetica, sans-serif;
+            width: 370px; }
+            .dropdown .group-blocks .media-block .container .combine .combine-content:nth-child(1) {
+              background: rgba(0, 0, 0, 0.13);
+              padding: 55px 20px 0;
+              width: 340px; }
+            .dropdown .group-blocks .media-block .container .combine .combine-content:nth-child(2) {
+              background-color: rgba(0, 0, 0, 0.185);
+              padding: 55px 20px 0;
+              width: 272px; }
+              .dropdown .group-blocks .media-block .container .combine .combine-content:nth-child(2) .combine-content__title {
+                margin: 0 0 23px 9px; }
+            .dropdown .group-blocks .media-block .container .combine .combine-content__title {
+              text-transform: uppercase;
+              color: #f25322;
+              font-size: 16px;
+              margin-bottom: 18px; }
+            .dropdown .group-blocks .media-block .container .combine .combine-content__text {
+              font-size: 14px;
+              color: #e5e5e5;
+              line-height: 23px; }
+            .dropdown .group-blocks .media-block .container .combine .combine-content .platforms {
               display: -webkit-box;
               display: -ms-flexbox;
-              display: flex;
-              margin: 15px 23px 0 0; }
-              .dropdown .media-block .container .combine .combine-content .platforms .platform__logo {
-                background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
-                background-position: 0 -3180px;
-                margin-right: 4px;
-                width: 11px;
-                height: 15px; }
-              .dropdown .media-block .container .combine .combine-content .platforms .platform__text {
-                text-transform: uppercase;
-                font-size: 12px;
-                margin-top: 2px;
-                color: #e5e5e5; }
-              .dropdown .media-block .container .combine .combine-content .platforms .platform:nth-child(2) .platform__logo {
-                background-position: 0 -60px; }
-          .dropdown .media-block .container .combine .combine-content .list-links__items {
-            margin-bottom: 12px;
-            font-size: 13px;
-            color: #e5e5e5;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex; }
-            .dropdown .media-block .container .combine .combine-content .list-links__items .point {
-              background-color: #e5e5e5;
-              margin: 6px 7px 0 0;
-              border-radius: 50%;
-              display: block;
-              width: 2px;
-              height: 2px; }
-            .dropdown .media-block .container .combine .combine-content .list-links__items .bottom-frame {
-              border-bottom: 1px solid #e5e5e500; }
-              .dropdown .media-block .container .combine .combine-content .list-links__items .bottom-frame:hover {
-                border-bottom: 1px solid #e5e5e5; }
+              display: flex; }
+              .dropdown .group-blocks .media-block .container .combine .combine-content .platforms .platform {
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                margin: 15px 23px 0 0; }
+                .dropdown .group-blocks .media-block .container .combine .combine-content .platforms .platform__logo {
+                  background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
+                  background-position: 0 -3180px;
+                  margin-right: 4px;
+                  width: 11px;
+                  height: 15px; }
+                .dropdown .group-blocks .media-block .container .combine .combine-content .platforms .platform__text {
+                  text-transform: uppercase;
+                  font-size: 12px;
+                  margin-top: 2px;
+                  color: #e5e5e5; }
+                .dropdown .group-blocks .media-block .container .combine .combine-content .platforms .platform:nth-child(2) .platform__logo {
+                  background-position: 0 -60px; }
+            .dropdown .group-blocks .media-block .container .combine .combine-content .list-links__items {
+              margin-bottom: 12px;
+              font-size: 13px;
+              color: #e5e5e5;
+              display: -webkit-box;
+              display: -ms-flexbox;
+              display: flex; }
+              .dropdown .group-blocks .media-block .container .combine .combine-content .list-links__items .point {
+                background-color: #e5e5e5;
+                margin: 6px 7px 0 0;
+                border-radius: 50%;
+                display: block;
+                width: 2px;
+                height: 2px; }
+              .dropdown .group-blocks .media-block .container .combine .combine-content .list-links__items .bottom-frame {
+                border-bottom: 1px solid #e5e5e500; }
+                .dropdown .group-blocks .media-block .container .combine .combine-content .list-links__items .bottom-frame:hover {
+                  border-bottom: 1px solid #e5e5e5; }
 
 .showblock {
   pointer-events: initial;
