--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -93,6 +93,7 @@ header {
     transition: all ease-in-out 0.15s;
     pointer-events: none;
     position: absolute;
+    z-index: 52;
     top: 0;
     .shadow-block {
         background: linear-gradient(90deg, rgba(0, 0, 0, 0.075) 0%, rgba(0, 0, 0, 0.349) 50%, rgba(0, 0, 0, 0.275) 100%);
@@ -257,9 +258,11 @@ header {
                         .list-links {
                             &__items {
                                 margin-bottom: 12px;
-                                font-size: 13px;
-                                color: #e5e5e5;
-                                display: flex;
+                                .link-point {
+                                    font-size: 13px;
+                                    color: #e5e5e5;
+                                    display: flex;
+                                }
                                 .point {
                                     background-color: #e5e5e5;
                                     margin: 6px 7px 0 0;
@@ -347,4 +350,49 @@ header {
     pointer-events: initial;
     opacity: 1;
     top: 37px;
+}
+.main-heading {
+    .title-bacground {
+        width: 100%;
+        height: 441px;
+        position: absolute;
+        object-fit: cover;
+        object-position: 0 -172px;
+        z-index: 30;
+    }
+    .nav-menu {
+        background-color: rgba(39,39,43,.85);
+        border-top: 1px solid rgba(255, 255, 255, 0.082);
+        font-family: Arial, Helvetica, sans-serif;
+        height: 66px;
+        z-index: 51;
+        position: relative;
+        .main-menu {
+            display: flex;
+            margin: 0 auto;
+            width: 1330px;
+            &__items {
+                display: flex;
+                margin-left: 35px;
+                .nav-links {
+                    text-transform: uppercase;
+                    font-size: 14px;
+                    font-weight: 700;
+                    color: #aaaaab;
+                    line-height: 65px;
+                }
+            }
+            &__items:nth-child(1) {
+                background: url(../images/logo-wot/download.svg) no-repeat;
+                background-position: center;
+                margin-left: 0;
+                height: 65px;
+                width: 127px;
+            }
+        }
+    }
+    .container-box {
+        width: 1330px;
+        margin: 0 auto;
+    }
 }
