--- a/style/style.css
+++ b/style/style.css
@@ -156,6 +156,7 @@ header {
   transition: all ease-in-out 0.15s;
   pointer-events: none;
   position: absolute;
+  z-index: 52;
   top: 0; }
   .dropdown .shadow-block {
     background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.075)), color-stop(50%, rgba(0, 0, 0, 0.349)), to(rgba(0, 0, 0, 0.275)));
@@ -303,12 +304,13 @@ header {
                 .dropdown .group-blocks .media-block .container .combine .combine-content .platforms .platform:nth-child(4) .platform__logo {
                   background-position: 0 -60px; }
             .dropdown .group-blocks .media-block .container .combine .combine-content .list-links__items {
-              margin-bottom: 12px;
-              font-size: 13px;
-              color: #e5e5e5;
-              display: -webkit-box;
-              display: -ms-flexbox;
-              display: flex; }
+              margin-bottom: 12px; }
+              .dropdown .group-blocks .media-block .container .combine .combine-content .list-links__items .link-point {
+                font-size: 13px;
+                color: #e5e5e5;
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex; }
               .dropdown .group-blocks .media-block .container .combine .combine-content .list-links__items .point {
                 background-color: #e5e5e5;
                 margin: 6px 7px 0 0;
@@ -369,3 +371,48 @@ header {
   pointer-events: initial;
   opacity: 1;
   top: 37px; }
+
+.main-heading .title-bacground {
+  width: 100%;
+  height: 441px;
+  position: absolute;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 0 -172px;
+  object-position: 0 -172px;
+  z-index: 30; }
+
+.main-heading .nav-menu {
+  background-color: rgba(39, 39, 43, 0.85);
+  border-top: 1px solid rgba(255, 255, 255, 0.082);
+  font-family: Arial, Helvetica, sans-serif;
+  height: 66px;
+  z-index: 51;
+  position: relative; }
+  .main-heading .nav-menu .main-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 auto;
+    width: 1330px; }
+    .main-heading .nav-menu .main-menu__items {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin-left: 35px; }
+      .main-heading .nav-menu .main-menu__items .nav-links {
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 700;
+        color: #aaaaab;
+        line-height: 65px; }
+    .main-heading .nav-menu .main-menu__items:nth-child(1) {
+      background: url(../images/logo-wot/download.svg) no-repeat;
+      background-position: center;
+      margin-left: 0;
+      height: 65px;
+      width: 127px; }
+
+.main-heading .container-box {
+  width: 1330px;
+  margin: 0 auto; }
