add list menuItems

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -369,6 +369,7 @@ header {
         position: relative;
         .main-menu {
             display: flex;
+            align-items: center;
             margin: 0 auto;
             width: 1330px;
             &__items {
@@ -381,13 +382,60 @@ header {
                     color: #aaaaab;
                     line-height: 65px;
                 }
+                .nav-links:hover {
+                    color: #fab81b !important;
+                }
+                .nav-arrow {
+                    background: url(../images/arrow/down.svg) no-repeat;
+                    background-position: center;
+                    position: relative;
+                    margin: 17px 0 2px 10px;
+                    width: 28px;
+                    height: 28px;
+                }
+                .nav-arrow:before {
+                    content: "";
+                    position: absolute;
+                    height: 10px;
+                    width: 1px;
+                    top: 10px;
+                    background-color: #aaaaab;
+                }
+                .nav-arrow:hover {
+                    background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMiA3IiB3aWR0aD0iOCIgaGVpZ2h0PSI1Ij48cGF0aCBmaWxsPSIjM2MyZjEyIiBkPSJNMTIgMlYwaC0xTDYgNCAxIDBIMHYybDUuOSA1SDZ6Ii8+PC9zdmc+) no-repeat;
+                    background-position: center;
+                    background-color: #fab81b;
+                    cursor: pointer;
+                }
             }
             &__items:nth-child(1) {
                 background: url(../images/logo-wot/download.svg) no-repeat;
                 background-position: center;
                 margin-left: 0;
-                height: 65px;
-                width: 127px;
+                height: 44px;
+                width: 185px;
+            }
+            .nav-list {
+                background-color: rgba(39,39,43,.93);
+                position: absolute;
+                margin-left: -20px;
+                top: 65px;
+                display: none;
+                &__link {
+                    display: block;
+                    padding: 14px 16px;
+                    color: #aaaaab;
+                    font-size: 14px;
+                }
+                &__link:hover {
+                    color: #fab81b !important;
+                }
+                .nav-list:first-child {
+                    .nav-list__items:nth-child(2) {
+                        text-transform: uppercase;
+                    }
+
+                }
             }
         }
     }
