--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -407,7 +407,7 @@ header {
                         top: 10px;
                         background-color: #aaaaab;
                     }
-                    .nav-arrow:hover:before{
+                    .nav-arrow:hover:before {
                         background-color: #fab81b !important;
                     }
                     .nav-arrow:hover {
@@ -426,31 +426,42 @@ header {
                 }
                 &__items:nth-child(5) {
                     .ten-years {
+                        position: relative;
                         height: 65px;
-                        &__logo {
+                        width: 70px;
+                        &::before {
                             background: url(../images/10-year/10-year-icon.png) center / contain;
+                            margin: 10px 0 0 0px;
                             position: absolute;
-                            margin-top: 10px;
-                            z-index: 10;
-                            float: left;
+                            content: "";
+                            z-index: 12;
                             height: 44px;
                             width: 44px;
                         }
-                        &__logo-hover {
+                        &::after {
+                            content: "";
                             background: url(../images/10-year/10y-icon-hover.png) center ;
+                            animation: rotate 3s linear infinite;
                             transition: opacity .7s;
-                            margin: -13px 0 0 -13px;
-                            background-size: 150%;
+                            margin: -29px 0 0 -96px;
+                            background-size: 130%;
                             position: absolute;
                             pointer-events: none;
                             opacity: 0;
-                            float: left;
-                            height: 90px;
-                            width: 70px;
+                            height: 120px;
+                            width: 100px;
+                            z-index: 10;
                         }
+                        &:hover::after {
+                            opacity: 1;
+                        }
+                        @keyframes rotate {
+                            from {
+                              transform: rotate(360deg);
+                            }
+                          }
                         .rotate-hover {
                             opacity: 1;
-                            pointer-events: initial;
                         }
                         &__text {
                             background: linear-gradient(to top,#d19235 0%,#cd6a11 8%,#d87519 26%,#f2bf65 61%,#ffff91 100%);
@@ -494,8 +505,9 @@ header {
                 width: 185px;
                 height: 44px;
                 &__text {
-                    font-family: Arial, Helvetica, sans-serif;
                     text-transform: uppercase;
+                    position: relative;
+                    z-index: 31;
                     font-weight: 700;
                     line-height: 45px;
                     color: #f9f5e1;
@@ -503,10 +515,20 @@ header {
                     text-align: center;
                     display: block;
                 }
-                &:hover {
+                &:before {
                     background: linear-gradient(to bottom,#fab81b 0%,#ff7e00 100%) no-repeat 0,linear-gradient(to bottom,#fab81b 0%,#ff7e00 100%) no-repeat 100%,#ff7e00 linear-gradient(to bottom,#ff7e00 0%,#c2530a 100%) no-repeat;
                     box-shadow: inset 0 0 8px rgba(255,210,0,.1), inset 0 1px 0 #fab81b, inset 0 -1px 0 #ff7e00;
                     background-size: 1px 100%,1px 100%,cover;
+                    position: absolute;
+                    transition: opacity .3s;
+                    opacity: 0;
+                    content: "";
+                    z-index: 30;
+                    width: 185px;
+                    height: 44px;
+                }
+                &:hover:before {
+                    opacity: 1;
                 }
             }
         }
