--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -533,8 +533,138 @@ header {
             }
         }
     }
+    .cross {
+        background: url(../images/icon/cross.svg) center no-repeat;
+        background-color: rgba(0,0,0,.35);
+        position: absolute;
+        margin-top: 20px;
+        cursor: pointer;
+        z-index: 50;
+        width: 32px;
+        height: 32px;
+        right: 20px;
+    }
     .container-box {
+        font-family: Arial, Helvetica, sans-serif;
+        position: relative;
+        z-index: 50;
         width: 1330px;
         margin: 0 auto;
+        .promo-block {
+            margin: 0 auto;
+            width: 675px;
+            .limited-height {
+                transition: all .25s ease-in-out;
+                overflow: hidden;
+                height: 300px;
+                .promo-title {
+                    transition: all .25s ease-in-out;
+                    padding: 80px 0;
+                    &__title {
+                        font-size: 41px;
+                        font-weight: 600;
+                        line-height: 46px;
+                        color: #f9f5e1;
+                        text-align: center;
+                    }
+                    &__text {
+                        margin-bottom: 25px;
+                        line-height: 24px;
+                        color: #e9e2bf;
+                        font-size: 17px;
+                    }
+                    .learn-more {
+                        margin: 0 auto;
+                        width: 160px;
+                        height: 44px;
+                        &__text {
+                            border: 2px solid #f9f5e1;
+                            transition: background .15s;
+                            text-transform: uppercase;
+                            text-align: center;
+                            line-height: 40px;
+                            font-weight: 700;
+                            color: #f9f5e1;
+                            font-size: 13px;
+                            display: block;
+                        }
+                        &:hover .learn-more__text {
+                            background: #f9f5e1;
+                            color: #474747;
+                        }
+                    }
+                }
+                .logo-wot {
+                    background: url(../images/logo-wot/logo.png) center/contain no-repeat;
+                    transition: all .25s ease-in-out;
+                    opacity: 0;
+                    margin: 0 auto;
+                    width: 272px;
+                    height: 135px;
+                }
+                .under-wot {
+                    margin-top: -270px;
+                    opacity: 0;
+                }
+                .over-wot {
+                    opacity: 1;
+                }
+            }
+            .low-block {
+                height: 180px;
+            }
+        }
+    }
+    .slider-store {
+        justify-content: space-between;
+        position: relative;
+        display: flex;
+        z-index: 50;
+        width: 1330px;
+        margin: 0 auto;
+        .slider-block {
+            background: rgb(75, 75, 78);
+            width: 986px;
+            height: 200px;
+        }
+        .block-store {
+            height: 200px;
+            width: 302px;
+            .link-store {
+                position: absolute;
+                overflow: hidden;
+                width: 302px;
+                height: 200px;
+                .premium-store {
+                    display: block;
+                    height: 200px;
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        background: url(../images/premium-store/wot_premshop-banner_ru_NO21NQQ.jpg) center/cover;
+                        transition: all .5s;
+                        width: 302px;
+                        height: 200px;
+                        display: block;
+                    }
+                    &:hover:before {
+                        background-color: rgba(14,14,15,.5);
+                        transform: scale(1.1);
+                    }
+                    &:after {
+                        content: "";
+                        position: absolute;
+                        background-color: rgba(14,14,15,.5);
+                        transition: all .5s;
+                        width: 302px;
+                        height: 200px;
+                        opacity: 0;
+                    }
+                    &:hover:after {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
     }
 }
